- Change the access level of CloudEmployeesContext class to public. - Added necessary nuget packages to the API project. - DefaultConnection added as a user-secret to the project. - MySql service was added to Program.cs

--- a/CloudEmployees.API/CloudEmployees.API.csproj
+++ b/CloudEmployees.API/CloudEmployees.API.csproj
@@ -1,13 +1,23 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>7594f1b0-7509-4c68-83bb-a1c950e85666</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CloudEmployees.DataAccess\CloudEmployees.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
