--- a/CloudEmployees.DataAccess/CloudEmployees.DataAccess.csproj
+++ b/CloudEmployees.DataAccess/CloudEmployees.DataAccess.csproj
@@ -10,4 +10,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CloudEmployees.Entities\CloudEmployees.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
